# projetoAgenteIA

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  app  build.txt  comandos_executados.sh  conteudoParaEstudo.md  conteudoParaEstudo.txt  download-models.sh  scripts.sh  test.sh  test_completo  test_espeak  test_espeak.cpp  unify_scripts.sh  version.sh
.cache/clangd/index/: Agente.cpp.2DA96C6B75D227C1.idx  Agente.hpp.87B26386C95739CB.idx  LogSistema.cpp.E617531DB9165C18.idx  LogSistema.hpp.5022862F2D1E1478.idx  ManipularArquivo.cpp.A4D69C09C319B1C2.idx  ManipularArquivo.hpp.BC763868E47D50B9.idx  SintetizadorVoz.cpp.E78E5970B8103852.idx  SintetizadorVoz.h.5774DEC177A71E18.idx  TestManipularArquivo.cpp.E8C96522F4B88E5C.idx  TestManipularArquivo.hpp.7968A50E9255A21A.idx  TesteAcaoFalar.cpp.563BCFFD515574FE.idx  VerificarArquivo.cpp.78E35DC56B889EFC.idx  VerificarArquivo.hpp.6DE257E9DA79785C.idx  allocators.h.E5164B5F17137CF4.idx  biginteger.h.330F31D4D5C0D972.idx  diyfp.h.0BA1B805B707E7E4.idx  document.h.444FD076D4231C44.idx  encodedstream.h.EE3786B4D8943A17.idx  encodings.h.303B6EFE6CDCD7E4.idx  error.h.80592788C9D9CF44.idx  filereadstream.h.BE081A71EB4DAF76.idx  ieee754.h.6EC8E7359C8666DA.idx  image_processor.cpp.0D091C6EBC2505A5.idx  image_processor.hpp.49D52BE476EA9FF5.idx  inference_engine.cpp.DE75CD6CA81CC932.idx  main.cpp.184B3E6EF55D39EF.idx  memorystream.h.0F51BDAC8580024A.idx  meta.h.1A56D30274CBC229.idx  pow10.h.DE70BEAF3FBFA856.idx  rapidjson.h.16D694FF812E5843.idx  reader.h.6AB64F69140A869D.idx  stack.h.3BC78D17E4DE751C.idx  stream.h.ABBF81C1A34C66CD.idx  strfunc.h.9F4BF5DBCAE43A84.idx  strtod.h.CFE10C986B7C02D9.idx  swap.h.88CFDC20C1326919.idx  test_log_sistema.cpp.85C97F6C40D486CA.idx  test_verificar_arquivo.cpp.2B0AA1A2B6F1572A.idx
docs/: ARQUITETURA_IA.md  ARVORE_DECISSAO.md  GERENCIAMENTO_RECURSO.md  IMAGE_PROCESSOR_TESTS.md  INTERACTIVE_TESTS.md  MATERIAL_ESTUDO.md  OPENCV_SETUP.md  TESTE_UNITARIO.md  TUTORIAL_C.md  VERSIONING.md  VOICE_ENGINE_SELECTION.md
include/agente/: Agente.hpp
include/arquivo/: EmuladorPandas.hpp  ManipularArquivo.hpp
include/enumProjeto/: StatusSaida.hpp
include/falaRobotica/: GravarAudio.hpp  SintetizadorVoz.h
include/tests/: TestManipularArquivo.hpp
include/utils/: ConverterDados.hpp  LogSistema.hpp  VerificarArquivo.hpp  image_processor.hpp
models/: Llama-3.2-1B-Instruct-Q4_K_M.gguf  Phi-3.5-mini-instruct-Q4_K_M.gguf  Qwen2.5-0.5B-Instruct-GGUF  qwen2.5-0.5b-instruct-q5_k_m.gguf
scripts_backup_20260406_002913/: check_gitignore.sh  test.sh
src/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt
src/core/agente/: Agente.cpp  CMakeLists.txt
src/core/arquivo/: CMakeLists.txt  ManipularArquivo.cpp
src/core/falaRobotica/: CMakeLists.txt  SintetizadorVoz.cpp
src/core/utils/: CMakeLists.txt  LogSistema.cpp  VerificarArquivo.cpp
src/utils/: CMakeLists.txt  image_processor.cpp
tests/: CMakeLists.txt  GravarAudio_Test.cpp  README.md  TestManipularArquivo.cpp  dadoTeste.csv  run_all_tests.cpp  run_tests.cpp  test_image_processor.cpp  test_log_sistema.cpp  test_verificar_arquivo.cpp  test_voice_engines.cpp  test_voice_simple.cpp
